--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -354,7 +354,7 @@
    "source": [
     "### Importing the module and loading the model\n",
     "\n",
-    "If everything went well, we need to add the previously selected model output directory to our PYTHON_PATH and are then ready to load newly generated model:"
+    "If everything went well, we can now import the newly generated Python module containing our model:"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "model = model_module.getModel()\n",
     "\n",
-    "print(\"Model name:\", model.getName())\n",
+    "print(\"Model name:      \", model.getName())\n",
     "print(\"Model parameters:\", model.getParameterIds())\n",
     "print(\"Model outputs:   \", model.getObservableIds())\n",
     "print(\"Model states:    \", model.getStateIds())"
