--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1011,19 +1011,6 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url      = {https://doi.org/10.1093/bioinformatics/btac755},
 }
 
-@Article{RaimundezFed2022,
-  author       = {Raimundez, Elba and Fedders, Michael and Hasenauer, Jan},
-  journal      = {bioRxiv},
-  title        = {Posterior marginalization accelerates Bayesian inference for dynamical systems},
-  year         = {2022},
-  abstract     = {Bayesian inference is an important method in the life and natural sciences for learning from data. It provides information about parameter uncertainties, and thereby the reliability of models and their predictions. Yet, generating representative samples from the Bayesian posterior distribution is often computationally challenging. Here, we present an approach that lowers the computational complexity of sample generation for problems with scaling, offset and noise parameters. The proposed method is based on the marginalization of the posterior distribution, which reduces the dimensionality of the sampling problem. We provide analytical results for a broad class of problems and show that the method is suitable for a large number of applications. Subsequently, we demonstrate the benefit of the approach for various application examples from the field of systems biology. We report a substantial improvement up to 50 times in the effective sample size per unit of time, in particular when applied to multi-modal posterior problems. As the scheme is broadly applicable, it will facilitate Bayesian inference in different research fields.Competing Interest StatementThe authors have declared no competing interest.},
-  doi          = {10.1101/2022.12.02.518841},
-  elocation-id = {2022.12.02.518841},
-  eprint       = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841.full.pdf},
-  publisher    = {Cold Spring Harbor Laboratory},
-  url          = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841},
-}
-
 @Article{AlbadryHoe2022,
   author   = {Albadry, Mohamed and Höpfl, Sebastian and Ehteshamzad, Nadia and König, Matthias and Böttcher, Michael and Neumann, Jasna and Lupp, Amelie and Dirsch, Olaf and Radde, Nicole and Christ, Bruno and Christ, Madlen and Schwen, Lars Ole and Laue, Hendrik and Klopfleisch, Robert and Dahmen, Uta},
   journal  = {Scientific Reports},
@@ -1225,6 +1212,19 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   month            = {09},
   title            = {Long-term monitoring of SARS-CoV-2 seroprevalence and variants in Ethiopia provides prediction for immunity and cross-immunity},
   year             = {2023},
+}
+
+@Article{RaimundezFed2023,
+  author           = {Elba Raim{\'{u}}ndez and Michael Fedders and Jan Hasenauer},
+  journal          = {{iScience}},
+  title            = {Posterior marginalization accelerates Bayesian inference for dynamical models of biological processes},
+  year             = {2023},
+  month            = {sep},
+  pages            = {108083},
+  creationdate     = {2023-10-04T14:12:00},
+  doi              = {10.1016/j.isci.2023.108083},
+  modificationdate = {2023-10-04T14:12:00},
+  publisher        = {Elsevier {BV}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
