--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1227,6 +1227,20 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Elsevier {BV}},
 }
 
+@Article{Mendes2023,
+  author           = {Mendes, Pedro},
+  journal          = {Frontiers in Cell and Developmental Biology},
+  title            = {Reproducibility and FAIR principles: the case of a segment polarity network model},
+  year             = {2023},
+  issn             = {2296-634X},
+  volume           = {11},
+  abstract         = {The issue of reproducibility of computational models and the related FAIR principles (findable, accessible, interoperable, and reusable) are examined in a specific test case. I analyze a computational model of the segment polarity network in Drosophila embryos published in 2000. Despite the high number of citations to this publication, 23 years later the model is barely accessible, and consequently not interoperable. Following the text of the original publication allowed successfully encoding the model for the open source software COPASI. Subsequently saving the model in the SBML format allowed it to be reused in other open source software packages. Submission of this SBML encoding of the model to the BioModels database enables its findability and accessibility. This demonstrates how the FAIR principles can be successfully enabled by using open source software, widely adopted standards, and public repositories, facilitating reproducibility and reuse of computational cell biology models that will outlive the specific software used.},
+  creationdate     = {2023-10-28T19:05:54},
+  doi              = {10.3389/fcell.2023.1201673},
+  modificationdate = {2023-10-28T19:05:54},
+  url              = {https://www.frontiersin.org/articles/10.3389/fcell.2023.1201673},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
