Evaluate and plot symbolic expressions based on simulation results (#2152)
Adds functions `amici.numpy.evaluate` and `amici.plotting.plot_expressions` to evaluate or directly plot symbolic expressions of model quantities, respectively.

Demo: see end of this section https://amici--2152.org.readthedocs.build/en/2152/ExampleSteadystate.html#Plotting-trajectories

--- a/python/examples/example_steadystate/ExampleSteadystate.ipynb
+++ b/python/examples/example_steadystate/ExampleSteadystate.ipynb
@@ -354,7 +354,7 @@
    "source": [
     "### Importing the module and loading the model\n",
     "\n",
-    "If everything went well, we need to add the previously selected model output directory to our PYTHON_PATH and are then ready to load newly generated model:"
+    "If everything went well, we can now import the newly generated Python module containing our model:"
    ]
   },
   {
@@ -392,7 +392,7 @@
    "source": [
     "model = model_module.getModel()\n",
     "\n",
-    "print(\"Model name:\", model.getName())\n",
+    "print(\"Model name:      \", model.getName())\n",
     "print(\"Model parameters:\", model.getParameterIds())\n",
     "print(\"Model outputs:   \", model.getObservableIds())\n",
     "print(\"Model states:    \", model.getStateIds())"
@@ -917,9 +917,31 @@
    "source": [
     "import amici.plotting\n",
     "\n",
-    "amici.plotting.plotStateTrajectories(rdata, model=None)\n",
-    "amici.plotting.plotObservableTrajectories(rdata, model=None)"
+    "amici.plotting.plot_state_trajectories(rdata, model=None)\n",
+    "amici.plotting.plot_observable_trajectories(rdata, model=None)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can also evaluate symbolic expressions of model quantities using `amici.numpy.evaluate`, or directly plot the results using  `amici.plotting.plot_expressions`:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "amici.plotting.plot_expressions(\n",
+    "    \"observable_x1 + observable_x2 + observable_x3\", rdata=rdata\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
