--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1241,6 +1241,16 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   url              = {https://www.frontiersin.org/articles/10.3389/fcell.2023.1201673},
 }
 
+@Misc{HuckBal2023,
+  author           = {Wilhelm Huck and Mathieu Baltussen and Thijs de Jong and Quentin Duez and William Robinson},
+  title            = {Chemical reservoir computation in a self-organizing reaction network},
+  year             = {2023},
+  creationdate     = {2023-11-18T09:09:45},
+  doi              = {10.21203/rs.3.rs-3487081/v1},
+  modificationdate = {2023-11-18T09:10:08},
+  publisher        = {Research Square Platform LLC},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
