Doc: Update reference list (#2172)
* HasenauerMer2023

* RaimundezFed2023

* Add Mendes2023

* HuckBal2023

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1011,19 +1011,6 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url      = {https://doi.org/10.1093/bioinformatics/btac755},
 }
 
-@Article{RaimundezFed2022,
-  author       = {Raimundez, Elba and Fedders, Michael and Hasenauer, Jan},
-  journal      = {bioRxiv},
-  title        = {Posterior marginalization accelerates Bayesian inference for dynamical systems},
-  year         = {2022},
-  abstract     = {Bayesian inference is an important method in the life and natural sciences for learning from data. It provides information about parameter uncertainties, and thereby the reliability of models and their predictions. Yet, generating representative samples from the Bayesian posterior distribution is often computationally challenging. Here, we present an approach that lowers the computational complexity of sample generation for problems with scaling, offset and noise parameters. The proposed method is based on the marginalization of the posterior distribution, which reduces the dimensionality of the sampling problem. We provide analytical results for a broad class of problems and show that the method is suitable for a large number of applications. Subsequently, we demonstrate the benefit of the approach for various application examples from the field of systems biology. We report a substantial improvement up to 50 times in the effective sample size per unit of time, in particular when applied to multi-modal posterior problems. As the scheme is broadly applicable, it will facilitate Bayesian inference in different research fields.Competing Interest StatementThe authors have declared no competing interest.},
-  doi          = {10.1101/2022.12.02.518841},
-  elocation-id = {2022.12.02.518841},
-  eprint       = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841.full.pdf},
-  publisher    = {Cold Spring Harbor Laboratory},
-  url          = {https://www.biorxiv.org/content/early/2022/12/03/2022.12.02.518841},
-}
-
 @Article{AlbadryHoe2022,
   author   = {Albadry, Mohamed and Höpfl, Sebastian and Ehteshamzad, Nadia and König, Matthias and Böttcher, Michael and Neumann, Jasna and Lupp, Amelie and Dirsch, Olaf and Radde, Nicole and Christ, Bruno and Christ, Madlen and Schwen, Lars Ole and Laue, Hendrik and Klopfleisch, Robert and Dahmen, Uta},
   journal  = {Scientific Reports},
@@ -1215,6 +1202,53 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   keywords         = {cardiovascular modelling, clinical data, computer modelling, diabetes, hemodynamic, hypertension, mathematical model},
   modificationdate = {2023-07-27T08:19:05},
   url              = {https://physoc.onlinelibrary.wiley.com/doi/abs/10.1113/JP284652},
+}
+
+@Unknown{HasenauerMer2023,
+  author           = {Hasenauer, Jan and Merkt, Simon and Ali, Solomon and Gudina, Esayas and Adissu, Wondimagegn and Münchhoff, Maximilian and Graf, Alexander and Krebs, Stefan and Elsbernd, Kira and Kisch, Rebecca and Sirgu, Sisay and Fantahun, Bereket and Bekele, Delayehu and Rubio-Acero, Raquel and Gashaw, Mulatu and Girma, Eyob and Yilma, Daniel and Zeynudin, Ahmed and Paunovic, Ivana and Wieser, Andreas},
+  creationdate     = {2023-09-19T09:21:01},
+  doi              = {10.21203/rs.3.rs-3307821/v1},
+  modificationdate = {2023-09-19T09:21:01},
+  month            = {09},
+  title            = {Long-term monitoring of SARS-CoV-2 seroprevalence and variants in Ethiopia provides prediction for immunity and cross-immunity},
+  year             = {2023},
+}
+
+@Article{RaimundezFed2023,
+  author           = {Elba Raim{\'{u}}ndez and Michael Fedders and Jan Hasenauer},
+  journal          = {{iScience}},
+  title            = {Posterior marginalization accelerates Bayesian inference for dynamical models of biological processes},
+  year             = {2023},
+  month            = {sep},
+  pages            = {108083},
+  creationdate     = {2023-10-04T14:12:00},
+  doi              = {10.1016/j.isci.2023.108083},
+  modificationdate = {2023-10-04T14:12:00},
+  publisher        = {Elsevier {BV}},
+}
+
+@Article{Mendes2023,
+  author           = {Mendes, Pedro},
+  journal          = {Frontiers in Cell and Developmental Biology},
+  title            = {Reproducibility and FAIR principles: the case of a segment polarity network model},
+  year             = {2023},
+  issn             = {2296-634X},
+  volume           = {11},
+  abstract         = {The issue of reproducibility of computational models and the related FAIR principles (findable, accessible, interoperable, and reusable) are examined in a specific test case. I analyze a computational model of the segment polarity network in Drosophila embryos published in 2000. Despite the high number of citations to this publication, 23 years later the model is barely accessible, and consequently not interoperable. Following the text of the original publication allowed successfully encoding the model for the open source software COPASI. Subsequently saving the model in the SBML format allowed it to be reused in other open source software packages. Submission of this SBML encoding of the model to the BioModels database enables its findability and accessibility. This demonstrates how the FAIR principles can be successfully enabled by using open source software, widely adopted standards, and public repositories, facilitating reproducibility and reuse of computational cell biology models that will outlive the specific software used.},
+  creationdate     = {2023-10-28T19:05:54},
+  doi              = {10.3389/fcell.2023.1201673},
+  modificationdate = {2023-10-28T19:05:54},
+  url              = {https://www.frontiersin.org/articles/10.3389/fcell.2023.1201673},
+}
+
+@Misc{HuckBal2023,
+  author           = {Wilhelm Huck and Mathieu Baltussen and Thijs de Jong and Quentin Duez and William Robinson},
+  title            = {Chemical reservoir computation in a self-organizing reaction network},
+  year             = {2023},
+  creationdate     = {2023-11-18T09:09:45},
+  doi              = {10.21203/rs.3.rs-3487081/v1},
+  modificationdate = {2023-11-18T09:10:08},
+  publisher        = {Research Square Platform LLC},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
