--- a/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
+++ b/python/examples/example_constant_species/ExampleEquilibrationLogic.ipynb
@@ -62,7 +62,7 @@
     "from IPython.display import Image\n",
     "\n",
     "fig = Image(\n",
-    "    filename=(\"../../../documentation/gfx/steadystate_solver_workflow.png\")\n",
+    "    filename=\"../../../documentation/gfx/steadystate_solver_workflow.png\"\n",
     ")\n",
     "fig"
    ]
@@ -97,12 +97,9 @@
    ],
    "source": [
     "import libsbml\n",
-    "import importlib\n",
     "import amici\n",
     "import os\n",
-    "import sys\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "# SBML model we want to import\n",
     "sbml_file = \"model_constant_species.xml\"\n",
@@ -397,7 +394,7 @@
     "  * `-5`: Error: The model was simulated past the timepoint `t=1e100` without finding a steady state. Therefore, it is likely that the model has not steady state for the given parameter vector.\n",
     "\n",
     "Here, only the second entry of `posteq_status` contains a positive integer: The first run of Newton's method failed due to a Jacobian, which oculd not be factorized, but the second run (simulation) contains the entry 1 (success). The third entry is 0, thus Newton's method was not launched for a second time.\n",
-    "More information can be found in`posteq_numsteps`: Also here, only the second entry contains a positive integer, which is smaller than the maximum number of steps taken (<1000). Hence steady state was reached via simulation, which corresponds to the simulated time written to `posteq_time`.\n",
+    "More information can be found in`posteq_numsteps`: Also here, only the second entry contains a positive integer, which is smaller than the maximum number of steps taken (<1000). Hence, steady state was reached via simulation, which corresponds to the simulated time written to `posteq_time`.\n",
     "\n",
     "We want to demonstrate a complete failure if inferring the steady state by reducing the number of integration steps to a lower value:"
    ]
@@ -951,7 +948,7 @@
     }
    ],
    "source": [
-    "# Singluar Jacobian, use simulation\n",
+    "# Singular Jacobian, use simulation\n",
     "model.setSteadyStateSensitivityMode(\n",
     "    amici.SteadyStateSensitivityMode.integrateIfNewtonFails\n",
     ")\n",
@@ -1207,7 +1204,7 @@
     }
    ],
    "source": [
-    "# Non-singular Jacobian, use simulaiton\n",
+    "# Non-singular Jacobian, use simulation\n",
     "model_reduced.setSteadyStateSensitivityMode(\n",
     "    amici.SteadyStateSensitivityMode.integrateIfNewtonFails\n",
     ")\n",
