--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -19,15 +19,16 @@
    "source": [
     "%matplotlib inline\n",
     "import os\n",
-    "import amici\n",
-    "from amici.petab_import import import_petab_problem\n",
-    "from amici.petab_objective import simulate_petab, RDATAS, EDATAS\n",
-    "from amici.plotting import plot_state_trajectories, plot_jacobian\n",
-    "import petab\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pathlib import Path\n",
     "from contextlib import suppress\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "import amici\n",
+    "from amici.petab.petab_import import import_petab_problem\n",
+    "from amici.petab.simulations import simulate_petab, RDATAS, EDATAS\n",
+    "from amici.plotting import plot_state_trajectories, plot_jacobian\n",
     "\n",
     "try:\n",
     "    import benchmark_models_petab\n",
@@ -153,7 +154,7 @@
     "    [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]],\n",
     ")\n",
     "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])\n",
-    "print(\"Simulations finished succesfully.\")\n",
+    "print(\"Simulations finished successfully.\")\n",
     "print()\n",
     "\n",
     "\n",
@@ -174,7 +175,7 @@
     "    [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]],\n",
     ")\n",
     "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])\n",
-    "print(\"Simulations finished succesfully.\")"
+    "print(\"Simulations finished successfully.\")"
    ]
   },
   {
@@ -339,7 +340,7 @@
     "**What happened?**\n",
     "\n",
     "AMICI failed to integrate the forward problem. The problem occurred for only one simulation condition, `condition_step_00_3`. The issue occurred at $t = 429.232$, where the error test failed.\n",
-    "This means, the solver is unable to take a step of non-zero size without violating the choosen error tolerances."
+    "This means, the solver is unable to take a step of non-zero size without violating the chosen error tolerances."
    ]
   },
   {
@@ -400,7 +401,7 @@
     "    [amici.simulation_status_to_str(rdata.status) for rdata in res[RDATAS]],\n",
     ")\n",
     "assert all(rdata.status == amici.AMICI_SUCCESS for rdata in res[RDATAS])\n",
-    "print(\"Simulations finished succesfully.\")"
+    "print(\"Simulations finished successfully.\")"
    ]
   },
   {
@@ -457,7 +458,7 @@
    "source": [
     "**What happened?**\n",
     "\n",
-    "The simulation failed because the initial step-size after an event or heaviside function was too small. The error occured during simulation of condition `model1_data1` after successful preequilibration (`model1_data2`)."
+    "The simulation failed because the initial step-size after an event or heaviside function was too small. The error occurred during simulation of condition `model1_data1` after successful preequilibration (`model1_data2`)."
    ]
   },
   {
@@ -646,7 +647,7 @@
    "id": "62d82971",
    "metadata": {},
    "source": [
-    "Considering that `n_par` occurrs as exponent, it's magnitude looks pretty high.\n",
+    "Considering that `n_par` occurs as exponent, it's magnitude looks pretty high.\n",
     "This term is very likely causing the problem - let's check:"
    ]
   },
@@ -909,7 +910,7 @@
    "source": [
     "**What happened?**\n",
     "\n",
-    "All given experimental conditions require pre-equilibration, i.e., finding a steady state. AMICI first tries to find a steady state using the Newton solver, if that fails, it tries simulating until steady state, if that also failes, it tries the Newton solver from the end of the simulation. In this case, all three failed. Neither Newton's method nor simulation yielded a steady state satisfying the required tolerances.\n",
+    "All given experimental conditions require pre-equilibration, i.e., finding a steady state. AMICI first tries to find a steady state using the Newton solver, if that fails, it tries simulating until steady state, if that also fails, it tries the Newton solver from the end of the simulation. In this case, all three failed. Neither Newton's method nor simulation yielded a steady state satisfying the required tolerances.\n",
     "\n",
     "This can also be seen in `ReturnDataView.preeq_status` (the three statuses corresponds to Newton \\#1, Simulation, Newton \\#2):"
    ]
