--- a/python/examples/example_jax/ExampleJax.ipynb
+++ b/python/examples/example_jax/ExampleJax.ipynb
@@ -262,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amici.petab_import import import_petab_problem\n",
+    "from amici.petab.petab_import import import_petab_problem\n",
     "\n",
     "amici_model = import_petab_problem(\n",
     "    petab_problem, force_compile=True, verbose=False\n",
@@ -276,7 +276,7 @@
    "source": [
     "# JAX implementation\n",
     "\n",
-    "For full jax support, we would have to implement a new [primitive](https://jax.readthedocs.io/en/latest/notebooks/How_JAX_primitives_work.html), which would require quite a bit of engineering, and in the end wouldn't add much benefit since AMICI can't run on GPUs. Instead will interface AMICI using the experimental jax module [host_callback](https://jax.readthedocs.io/en/latest/jax.experimental.host_callback.html)."
+    "For full jax support, we would have to implement a new [primitive](https://jax.readthedocs.io/en/latest/notebooks/How_JAX_primitives_work.html), which would require quite a bit of engineering, and in the end wouldn't add much benefit since AMICI can't run on GPUs. Instead, will interface AMICI using the experimental jax module [host_callback](https://jax.readthedocs.io/en/latest/jax.experimental.host_callback.html)."
    ]
   },
   {
@@ -294,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from amici.petab_objective import simulate_petab\n",
+    "from amici.petab.simulations import simulate_petab\n",
     "import amici\n",
     "\n",
     "amici_solver = amici_model.getSolver()\n",
@@ -341,7 +341,7 @@
    "id": "98e819bd",
    "metadata": {},
    "source": [
-    "Now we can finally define the JAX function that runs amici simulation using the host callback. We add a `custom_jvp` decorater so that we can define a custom jacobian vector product function in the next step. More details about custom jacobian vector product functions can be found in the [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/Custom_derivative_rules_for_Python_code.html)"
+    "Now we can finally define the JAX function that runs amici simulation using the host callback. We add a `custom_jvp` decorator so that we can define a custom jacobian vector product function in the next step. More details about custom jacobian vector product functions can be found in the [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/Custom_derivative_rules_for_Python_code.html)"
    ]
   },
   {
