--- a/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
+++ b/python/examples/example_presimulation/ExampleExperimentalConditions.ipynb
@@ -21,16 +21,12 @@
     "# Directory to which the generated model code is written\n",
     "model_output_dir = model_name\n",
     "\n",
+    "from pprint import pprint\n",
+    "\n",
     "import libsbml\n",
-    "import amici\n",
-    "import amici.plotting\n",
-    "import os\n",
-    "import sys\n",
-    "import importlib\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from pprint import pprint"
+    "\n",
+    "import amici.plotting"
    ]
   },
   {
@@ -143,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For this example we want specify the initial drug and kinase concentrations as experimental conditions. Accordingly we specify them as `fixedParameters`. The meaning of `fixedParameters` is defined in the [Glossary](https://amici.readthedocs.io/en/latest/glossary.html#term-fixed-parameters), which we display here for convenience."
+    "For this example we want to specify the initial drug and kinase concentrations as experimental conditions. Accordingly, we specify them as `fixedParameters`. The meaning of `fixedParameters` is defined in the [Glossary](https://amici.readthedocs.io/en/latest/glossary.html#term-fixed-parameters), which we display here for convenience."
    ]
   },
   {
@@ -369,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The resulting trajectory is definitely not what one may expect. The problem is that the `DRUG_0` and `KIN_0` set initial conditions for species in the model. By default these initial conditions are only applied at the very beginning of the simulation, i.e., before the preequilibration. Accordingly, the `fixedParameters` that we specified do not have any effect. To fix this, we need to set the `reinitializeFixedParameterInitialStates` attribue to `True`, to spefify that AMICI reinitializes all states that have `fixedParameter`-dependent initial states."
+    "The resulting trajectory is definitely not what one may expect. The problem is that the `DRUG_0` and `KIN_0` set initial conditions for species in the model. By default, these initial conditions are only applied at the very beginning of the simulation, i.e., before the preequilibration. Accordingly, the `fixedParameters` that we specified do not have any effect. To fix this, we need to set the `reinitializeFixedParameterInitialStates` attribute to `True`, to specify that AMICI reinitializes all states that have `fixedParameter`-dependent initial states."
    ]
   },
   {
