--- a/python/examples/example_splines/ExampleSplines.ipynb
+++ b/python/examples/example_splines/ExampleSplines.ipynb
@@ -24,20 +24,19 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
     "import os\n",
-    "import libsbml\n",
-    "import amici\n",
+    "import sys\n",
+    "from importlib import import_module\n",
+    "from shutil import rmtree\n",
+    "from tempfile import TemporaryDirectory\n",
+    "from uuid import uuid1\n",
     "\n",
+    "import matplotlib as mpl\n",
     "import numpy as np\n",
     "import sympy as sp\n",
-    "\n",
-    "from shutil import rmtree\n",
-    "from importlib import import_module\n",
-    "from uuid import uuid1\n",
-    "from tempfile import TemporaryDirectory\n",
-    "import matplotlib as mpl\n",
     "from matplotlib import pyplot as plt\n",
+    "\n",
+    "import amici\n",
     "\n",
     "# Choose build directory\n",
     "BUILD_PATH = None  # temporary folder\n",
@@ -458,8 +457,7 @@
       "\t\t\t<cn>2</cn>\n",
       "\t\t</math>\n",
       "\t</amici:spline_values>\n",
-      "</amici:spline>\n",
-      "\n"
+      "</amici:spline>\n"
      ]
     }
    ],
@@ -1137,7 +1135,6 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import tempfile\n",
     "import time"
    ]
@@ -1179,7 +1176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
+    "# If running as a GitHub action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv(\"GITHUB_ACTIONS\") is not None:\n",
     "    nruns = 1\n",
     "    num_nodes = [4]\n",
