--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -47,23 +47,19 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import math\n",
-    "import logging\n",
-    "import contextlib\n",
-    "import multiprocessing\n",
     "import copy\n",
-    "\n",
-    "import numpy as np\n",
-    "import sympy as sp\n",
-    "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
+    "import logging\n",
+    "import os\n",
     "\n",
     "import libsbml\n",
-    "import amici\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import petab\n",
-    "import pypesto\n",
-    "import pypesto.petab"
+    "import pypesto.petab\n",
+    "import sympy as sp\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "import amici"
    ]
   },
   {
@@ -103,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "# If running as a Github action, just do the minimal amount of work required to check whether the code is working\n",
+    "# If running as a GitHub action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv(\"GITHUB_ACTIONS\") is not None:\n",
     "    n_starts = 15\n",
     "    pypesto_optimizer = pypesto.optimize.FidesOptimizer(\n",
