--- a/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
+++ b/python/examples/example_splines_swameye/ExampleSplinesSwameye2003.ipynb
@@ -101,11 +101,11 @@
    "source": [
     "# If running as a GitHub action, just do the minimal amount of work required to check whether the code is working\n",
     "if os.getenv(\"GITHUB_ACTIONS\") is not None:\n",
-    "    n_starts = 15\n",
+    "    n_starts = 25\n",
     "    pypesto_optimizer = pypesto.optimize.FidesOptimizer(\n",
     "        verbose=logging.WARNING, options=dict(maxiter=10)\n",
     "    )\n",
-    "    pypesto_engine = pypesto.engine.SingleCoreEngine()"
+    "    pypesto_engine = pypesto.engine.MultiProcessEngine()"
    ]
   },
   {
