Update reference list

--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1251,6 +1251,23 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   publisher        = {Research Square Platform LLC},
 }
 
+@Article{LangPen2024,
+  author           = {Lang, Paul F. AND Penas, David R. AND Banga, Julio R. AND Weindl, Daniel AND Novak, Bela},
+  journal          = {PLOS Computational Biology},
+  title            = {Reusable rule-based cell cycle model explains compartment-resolved dynamics of 16 observables in RPE-1 cells},
+  year             = {2024},
+  month            = {01},
+  number           = {1},
+  pages            = {1-24},
+  volume           = {20},
+  abstract         = {The mammalian cell cycle is regulated by a well-studied but complex biochemical reaction system. Computational models provide a particularly systematic and systemic description of the mechanisms governing mammalian cell cycle control. By combining both state-of-the-art multiplexed experimental methods and powerful computational tools, this work aims at improving on these models along four dimensions: model structure, validation data, validation methodology and model reusability. We developed a comprehensive model structure of the full cell cycle that qualitatively explains the behaviour of human retinal pigment epithelial-1 cells. To estimate the model parameters, time courses of eight cell cycle regulators in two compartments were reconstructed from single cell snapshot measurements. After optimisation with a parallel global optimisation metaheuristic we obtained excellent agreements between simulations and measurements. The PEtab specification of the optimisation problem facilitates reuse of model, data and/or optimisation results. Future perturbation experiments will improve parameter identifiability and allow for testing model predictive power. Such a predictive model may aid in drug discovery for cell cycle-related disorders.},
+  creationdate     = {2024-01-24T20:02:16},
+  doi              = {10.1371/journal.pcbi.1011151},
+  modificationdate = {2024-01-24T20:02:16},
+  publisher        = {Public Library of Science},
+  url              = {https://doi.org/10.1371/journal.pcbi.1011151},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
