--- a/documentation/ExampleJax.ipynb
+++ b/documentation/ExampleJax.ipynb
@@ -572,7 +572,7 @@
    "source": [
     "from amici.petab.petab_import import import_petab_problem\n",
     "\n",
-    "amici_model = import_petab_problem(petab_problem, force_compile=True)"
+    "amici_model = import_petab_problem(petab_problem, compile_=True)"
    ]
   },
   {
