--- a/python/examples/example_errors.ipynb
+++ b/python/examples/example_errors.ipynb
@@ -77,7 +77,7 @@
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Fujita_SciSignal2010\")\n",
     "amici_model = import_petab_problem(\n",
-    "    petab_problem, verbose=False, force_compile=False\n",
+    "    petab_problem, verbose=False, compile_=None\n",
     ")\n",
     "\n",
     "np.random.seed(2991)\n",
@@ -423,7 +423,7 @@
    "source": [
     "petab_problem = benchmark_models_petab.get_problem(\"Weber_BMC2015\")\n",
     "amici_model = import_petab_problem(\n",
-    "    petab_problem, verbose=False, force_compile=False\n",
+    "    petab_problem, verbose=False, compile_=None\n",
     ")\n",
     "\n",
     "np.random.seed(4)\n",
@@ -699,7 +699,7 @@
     "amici_model = import_petab_problem(\n",
     "    petab_problem,\n",
     "    verbose=False,\n",
-    "    force_compile=True,\n",
+    "    compile_=True,\n",
     "    model_name=\"Blasi_CellSystems2016_1\",\n",
     ")\n",
     "\n",
@@ -819,7 +819,7 @@
     "    # we need a different model name if we import the model again\n",
     "    # we cannot load a model with the same name as an already loaded model\n",
     "    model_name=\"Blasi_CellSystems2016_2\",\n",
-    "    force_compile=True,\n",
+    "    compile_=True,\n",
     ")\n",
     "del os.environ[\"AMICI_EXPERIMENTAL_SBML_NONCONST_CLS\"]\n",
     "\n",
