--- a/python/examples/example_jax/ExampleJax.ipynb
+++ b/python/examples/example_jax/ExampleJax.ipynb
@@ -265,7 +265,7 @@
     "from amici.petab.petab_import import import_petab_problem\n",
     "\n",
     "amici_model = import_petab_problem(\n",
-    "    petab_problem, force_compile=True, verbose=False\n",
+    "    petab_problem, compile_=True, verbose=False\n",
     ")"
    ]
   },
