--- a/documentation/amici_refs.bib
+++ b/documentation/amici_refs.bib
@@ -1163,15 +1163,6 @@ Survival or apoptosis is a binary decision in individual cells. However, at the 
   url              = {https://doi.org/10.1007/978-1-0716-3008-2_3},
 }
 
-@Misc{SluijsZho2023,
-  author           = {Bob van Sluijs and Tao Zhou and Britta Helwig and Mathieu Baltussen and Frank Nelissen and Hans Heus and Wilhelm Huck},
-  title            = {Inverse Design of Enzymatic Reaction Network States},
-  year             = {2023},
-  creationdate     = {2023-07-06T10:39:46},
-  doi              = {10.21203/rs.3.rs-2646906/v1},
-  modificationdate = {2023-07-06T10:40:37},
-}
-
 @Article{BuckBas2023,
   author           = {Michèle C. Buck and Lisa Bast and Judith S. Hecker and Jennifer Rivière and Maja Rothenberg-Thurley and Luisa Vogel and Dantong Wang and Immanuel Andrä and Fabian J. Theis and Florian Bassermann and Klaus H. Metzeler and Robert A.J. Oostendorp and Carsten Marr and Katharina S. Götze},
   journal          = {iScience},
@@ -1266,6 +1257,21 @@ Clonal hematopoiesis of indeterminate potential (CHIP) describes the age-related
   modificationdate = {2024-01-24T20:02:16},
   publisher        = {Public Library of Science},
   url              = {https://doi.org/10.1371/journal.pcbi.1011151},
+}
+
+@Article{SluijsZho2024,
+  author           = {van Sluijs, Bob and Zhou, Tao and Helwig, Britta and Baltussen, Mathieu G. and Nelissen, Frank H. T. and Heus, Hans A. and Huck, Wilhelm T. S.},
+  journal          = {Nature Communications},
+  title            = {Iterative design of training data to control intricate enzymatic reaction networks},
+  year             = {2024},
+  issn             = {2041-1723},
+  month            = feb,
+  number           = {1},
+  volume           = {15},
+  creationdate     = {2024-02-23T17:09:35},
+  doi              = {10.1038/s41467-024-45886-9},
+  modificationdate = {2024-02-23T17:09:35},
+  publisher        = {Springer Science and Business Media LLC},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
